--- a/pom.xml
+++ b/pom.xml
@@ -33,43 +33,59 @@
         <maven.compiler.target>8</maven.compiler.target>
 
 	    <!-- Dependency versions -->
-        <commons-io.version>2.8.0</commons-io.version>
-        <commons-lang.version>3.11</commons-lang.version>
-        <greenmail.version>1.6.1</greenmail.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-lang.version>3.12.0</commons-lang.version>
+        <greenmail.version>1.6.5</greenmail.version>
         <hamcrest.version>2.2</hamcrest.version>
         <httpcore.version>4.4.14</httpcore.version>
         <httpclient.version>4.5.13</httpclient.version>
-        <jms-api.version>2.0</jms-api.version>
-        <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <logback.version>1.2.3</logback.version>
-        <mockito.version>3.6.28</mockito.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <spring.version>5.3.2</spring.version>
+        <jakarta-jms.version>2.0.3</jakarta-jms.version>
+        <junit-jupiter.version>5.7.2</junit-jupiter.version>
+        <logback.version>1.2.5</logback.version>
+        <mockito.version>3.9.0</mockito.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <spring.version>5.3.9</spring.version>
 
         <!-- Plugin versions -->
-        <checkstyle-maven-plugin.version>3.1.1</checkstyle-maven-plugin.version>
+        <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
         <findbugs-slf4j-bug-pattern.version>1.4.2</findbugs-slf4j-bug-pattern.version>
         <findbugs-sec-bug-pattern.version>1.8.0</findbugs-sec-bug-pattern.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
-        <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+        <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <nexus-staging-plugin.version>1.6.8</nexus-staging-plugin.version>
-        <spotbugs.version>4.2.0</spotbugs.version>
+        <spotbugs.version>4.2.3</spotbugs.version>
         <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
 
         <!-- Plugin dependencies -->
-        <asm.version>9.0</asm.version>
-        <checkstyle.version>8.39</checkstyle.version>
+        <asm.version>9.2</asm.version>
+        <checkstyle.version>8.45.1</checkstyle.version>
         <maven-dependency-analyzer.version>1.11.3</maven-dependency-analyzer.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- BOMs -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Third-party dependencies added to avoid dependency convergence errors -->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -107,9 +123,9 @@
             <version>${commons-io.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>${jms-api.version}</version>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${jakarta-jms.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -134,7 +150,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <!-- Version defined in junit bom, imported in dependencyManagement section -->
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -149,7 +165,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
-            <version>${spring.version}</version>
+            <!-- Version defined in spring framework bom, imported in dependencyManagement section -->
         </dependency>
     </dependencies>
 
