--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,10 @@
 
 	    <!-- Dependency versions -->
         <commons-io.version>2.11.0</commons-io.version>
+        <greenmail.version>1.6.10</greenmail.version>
+
+        <!-- Dependency versions, matched to Spring Boot -->
         <commons-lang.version>3.12.0</commons-lang.version>
-        <greenmail.version>1.6.9</greenmail.version>
         <hamcrest.version>2.2</hamcrest.version>
         <httpcore.version>4.4.15</httpcore.version>
         <httpclient.version>4.5.13</httpclient.version>
