--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <logback.version>1.2.11</logback.version>
         <mockito.version>4.5.1</mockito.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <spring.version>5.3.22</spring.version>
+        <spring.version>5.3.23</spring.version>
 
         <!-- Plugin versions -->
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
@@ -260,6 +260,14 @@
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>${spotbugs.version}</version>
+                <dependencies>
+                    <!-- Overriding the default analyzer version, to support JDK 19 -->
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>${asm.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
