--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.spt-development</groupId>
     <artifactId>spt-development-test</artifactId>
-    <version>2.0.10-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <name>test</name>
     <description>A collection of utility classes useful for unit and integration testing.</description>
@@ -38,14 +38,14 @@
         <!-- Dependency versions, matched to Spring Boot -->
         <commons-lang.version>3.12.0</commons-lang.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <httpcore.version>4.4.15</httpcore.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <jakarta-jms.version>2.0.3</jakarta-jms.version>
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <logback.version>1.2.11</logback.version>
-        <mockito.version>4.5.1</mockito.version>
-        <slf4j.version>1.7.36</slf4j.version>
-        <spring.version>5.3.23</spring.version>
+        <httpcore5.version>5.1.5</httpcore5.version>
+        <httpclient5.version>5.1.4</httpclient5.version>
+        <jakarta-jms.version>3.1.0</jakarta-jms.version>
+        <junit-jupiter.version>5.9.1</junit-jupiter.version>
+        <logback.version>1.4.5</logback.version>
+        <mockito.version>4.8.1</mockito.version>
+        <slf4j.version>2.0.4</slf4j.version>
+        <spring.version>6.0.2</spring.version>
 
         <!-- Plugin versions -->
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
@@ -90,9 +90,9 @@
 
             <!-- Third-party dependencies added to avoid dependency convergence errors -->
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpcore</artifactId>
-                <version>${httpcore.version}</version>
+                <groupId>org.apache.httpcomponents.core5</groupId>
+                <artifactId>httpcore5</artifactId>
+                <version>${httpcore5.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -135,13 +135,13 @@
             <version>${commons-lang.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
+            <groupId>org.apache.httpcomponents.core5</groupId>
+            <artifactId>httpcore5</artifactId>
             <!-- Version defined in dependencyManagement section -->
         </dependency>
         <dependency>
