--- a/pom.xml
+++ b/pom.xml
@@ -32,20 +32,20 @@
         <maven.compiler.release>17</maven.compiler.release>
 
 	    <!-- Dependency versions -->
-        <commons-io.version>2.11.0</commons-io.version>
+        <commons-io.version>2.12.0</commons-io.version>
         <greenmail.version>2.0.0</greenmail.version>
 
         <!-- Dependency versions, matched to Spring Boot -->
         <commons-lang.version>3.12.0</commons-lang.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <httpcore5.version>5.1.5</httpcore5.version>
-        <httpclient5.version>5.1.4</httpclient5.version>
+        <httpcore5.version>5.2.1</httpcore5.version>
+        <httpclient5.version>5.2.1</httpclient5.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-        <junit-jupiter.version>5.9.2</junit-jupiter.version>
+        <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <logback.version>1.4.7</logback.version>
-        <mockito.version>4.8.1</mockito.version>
+        <mockito.version>5.3.1</mockito.version>
         <slf4j.version>2.0.7</slf4j.version>
-        <spring.version>6.0.8</spring.version>
+        <spring.version>6.0.9</spring.version>
 
         <!-- Plugin versions -->
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
@@ -89,6 +89,11 @@
             </dependency>
 
             <!-- Third-party dependencies added to avoid dependency convergence errors -->
+            <dependency>
+                <groupId>org.apache.httpcomponents.core5</groupId>
+                <artifactId>httpcore5</artifactId>
+                <version>${httpcore5.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -137,7 +142,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents.core5</groupId>
             <artifactId>httpcore5</artifactId>
-            <version>${httpcore5.version}</version>
+            <!-- Version defined in dependencyManagement section -->
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
