--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <maven.compiler.release>17</maven.compiler.release>
 
 	    <!-- Dependency versions -->
-        <commons-io.version>2.13.0</commons-io.version>
+        <commons-io.version>2.14.0</commons-io.version>
         <greenmail.version>2.0.0</greenmail.version>
 
         <!-- Dependency versions, matched to Spring Boot -->
@@ -44,30 +44,30 @@
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <logback.version>1.4.11</logback.version>
         <mockito.version>5.3.1</mockito.version>
-        <slf4j.version>2.0.7</slf4j.version>
-        <spring.version>6.0.11</spring.version>
+        <slf4j.version>2.0.9</slf4j.version>
+        <spring.version>6.0.12</spring.version>
 
         <!-- Plugin versions -->
-        <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
+        <checkstyle-maven-plugin.version>3.3.0</checkstyle-maven-plugin.version>
         <findbugs-slf4j-bug-pattern.version>1.5.0</findbugs-slf4j-bug-pattern.version>
         <findbugs-sec-bug-pattern.version>1.12.0</findbugs-sec-bug-pattern.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
-        <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
+        <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-        <maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>
+        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <nexus-staging-plugin.version>1.6.13</nexus-staging-plugin.version>
-        <spotbugs.version>4.6.0.0</spotbugs.version>
-        <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
+        <spotbugs.version>4.7.3.6</spotbugs.version>
+        <versions-maven-plugin.version>2.16.1</versions-maven-plugin.version>
 
         <!-- Plugin dependencies -->
         <asm.version>9.5</asm.version>
-        <checkstyle.version>9.0.1</checkstyle.version>
-        <maven-dependency-analyzer.version>1.12.0</maven-dependency-analyzer.version>
+        <checkstyle.version>10.12.3</checkstyle.version>
+        <maven-dependency-analyzer.version>1.13.2</maven-dependency-analyzer.version>
     </properties>
 
     <dependencyManagement>
