--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,7 @@ jobs:
         with:
           website: jdk.java.net
           release: 21
-
-      - name: Build with Maven
-        run: mvn clean install -B
-
-      - name: Mutation testing
-        run: mvn org.pitest:pitest-maven:mutationCoverage -B
+      - run: ./mvnw clean install -Pall-quality-gates -B
 
   release:
     runs-on: ubuntu-latest
@@ -36,7 +31,7 @@ jobs:
           release: 21
           
       - name: Determine version
-        run: echo "POM_VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec | sed -e 's/-SNAPSHOT//')" >> $GITHUB_ENV
+        run: echo "POM_VERSION=$(./mvnw -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec | sed -e 's/-SNAPSHOT//')" >> $GITHUB_ENV
 
       - name: Import GPG key
         id: import_gpg
@@ -51,7 +46,7 @@ jobs:
           git config user.name "GitHub Actions"
 
       - name: Create release
-        run: mvn --settings .github/maven-settings.xml release:prepare release:perform -DskipTests -Prelease -B
+        run: ./mvnw --settings .github/maven-settings.xml release:prepare release:perform -DskipTests -Prelease -B
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
@@ -67,3 +62,4 @@ jobs:
           tag: ${{ env.POM_VERSION }}
           artifacts: target/spt-development-test-${{ env.POM_VERSION }}.jar
           artifactContentType: application/java-archive
+          bodyFile: documentation/releases/release-${{ env.POM_VERSION }}.md
