--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
         uses: oracle-actions/setup-java@v1
@@ -19,10 +21,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/test-main'
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
         uses: oracle-actions/setup-java@v1
