Added repository to checkout action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          repository: ${{ github.event.repository.name }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
@@ -26,6 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          repository: ${{ github.event.repository.name }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
