--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
+          username: git
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
@@ -28,6 +29,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
+          username: git
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
