--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          username: ${{ secrest.GIT_HUB_USERNAME }}
+          username: ${{ secrets.GIT_HUB_USERNAME }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          username: ${{ secrest.GIT_HUB_USERNAME }}
+          username: ${{ secrets.GIT_HUB_USERNAME }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
 
       - name: Set up JDK 21
