--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          username: ${{ secrets.GIT_HUB_USERNAME }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
+          persist-credentials: false
 
       - name: Set up JDK 21
         uses: oracle-actions/setup-java@v1
@@ -29,8 +29,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          username: ${{ secrets.GIT_HUB_USERNAME }}
           token: ${{ secrets.GIT_HUB_TOKEN }}
+          persist-credentials: false
 
       - name: Set up JDK 21
         uses: oracle-actions/setup-java@v1
