--- a/pom.xml
+++ b/pom.xml
@@ -35,47 +35,46 @@
         <maven.min.version>3.9.4</maven.min.version>
 
 	    <!-- Dependency versions -->
-        <commons-io.version>2.14.0</commons-io.version>
-        <greenmail.version>2.0.0</greenmail.version>
+        <commons-io.version>2.15.1</commons-io.version>
+        <greenmail.version>2.0.1</greenmail.version>
 
         <!-- Dependency versions, matched to Spring Boot -->
-        <commons-lang.version>3.12.0</commons-lang.version>
+        <commons-lang.version>3.13.0</commons-lang.version>
         <hamcrest.version>2.2</hamcrest.version>
         <httpcore5.version>5.2.3</httpcore5.version>
         <httpclient5.version>5.2.1</httpclient5.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-        <junit-jupiter.version>5.9.3</junit-jupiter.version>
+        <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <logback.version>1.4.11</logback.version>
-        <mockito.version>5.3.1</mockito.version>
+        <mockito.version>5.7.0</mockito.version>
         <slf4j.version>2.0.9</slf4j.version>
-        <spring.version>6.0.13</spring.version>
+        <spring.version>6.1.1</spring.version>
 
         <!-- Plugin versions -->
-        <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
-        <checkstyle-maven-plugin.version>3.3.0</checkstyle-maven-plugin.version>
-        <dependency-check-maven.version>8.4.1</dependency-check-maven.version>
+        <build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
+        <checkstyle-maven-plugin.version>3.3.1</checkstyle-maven-plugin.version>
+        <dependency-check-maven.version>9.0.2</dependency-check-maven.version>
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
-        <license-maven-plugin.version>2.2.0</license-maven-plugin.version>
+        <license-maven-plugin.version>2.3.0</license-maven-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
-        <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
-        <maven-pmd-plugin.version>3.21.0</maven-pmd-plugin.version>
+        <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+        <maven-jxr-plugin.version>3.3.1</maven-jxr-plugin.version>
+        <maven-pmd-plugin.version>3.21.2</maven-pmd-plugin.version>
         <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
         <maven-scm-plugin.version>2.0.1</maven-scm-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
         <nexus-staging-plugin.version>1.6.13</nexus-staging-plugin.version>
-        <spotbugs.version>4.7.3.6</spotbugs.version>
-        <versions-maven-plugin.version>2.16.1</versions-maven-plugin.version>
+        <spotbugs.version>4.8.1.0</spotbugs.version>
+        <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
 
         <!-- Plugin dependencies -->
+        <checkstyle.version>10.12.5</checkstyle.version>
         <findbugs-slf4j-bug-pattern.version>1.5.0</findbugs-slf4j-bug-pattern.version>
         <findbugs-sec-bug-pattern.version>1.12.0</findbugs-sec-bug-pattern.version>
-        <checkstyle.version>10.12.4</checkstyle.version>
-        <maven-dependency-analyzer.version>1.13.2</maven-dependency-analyzer.version>
     </properties>
 
     <dependencyManagement>
@@ -435,6 +434,9 @@
                 <artifactId>dependency-check-maven</artifactId>
                 <version>${dependency-check-maven.version}</version>
                 <configuration>
+                    <!-- NVD API Key obtained from  https://nvd.nist.gov/developers/request-an-api-key -->
+                    <nvdApiKey>${nvdApiKey}</nvdApiKey>
+                    
                     <!-- Assembly analyzer disabled because we don't have any .NET code/dlls -->
                     <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                     <!-- Node and retirejs analyzer disabled, because any js floating around isn't part of the main app -->
