--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
 	    <!-- Dependency versions -->
         <commons-io.version>2.17.0</commons-io.version>
-        <greenmail.version>2.0.1</greenmail.version>
+        <greenmail.version>2.1.0</greenmail.version>
 
         <!-- Dependency versions, matched to Spring Boot -->
         <commons-lang.version>3.14.0</commons-lang.version>
@@ -44,36 +44,36 @@
         <httpcore5.version>5.2.5</httpcore5.version>
         <httpclient5.version>5.3.1</httpclient5.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-        <junit-jupiter.version>5.10.3</junit-jupiter.version>
-        <logback.version>1.5.8</logback.version>
+        <junit-jupiter.version>5.10.5</junit-jupiter.version>
+        <logback.version>1.5.11</logback.version>
         <mockito.version>5.11.0</mockito.version>
         <slf4j.version>2.0.16</slf4j.version>
-        <spring.version>6.1.13</spring.version>
+        <spring.version>6.1.14</spring.version>
 
         <!-- Plugin versions -->
         <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
-        <checkstyle-maven-plugin.version>3.5.0</checkstyle-maven-plugin.version>
-        <dependency-check-maven.version>10.0.4</dependency-check-maven.version>
+        <checkstyle-maven-plugin.version>3.6.0</checkstyle-maven-plugin.version>
+        <dependency-check-maven.version>11.1.0</dependency-check-maven.version>
         <license-maven-plugin.version>2.4.0</license-maven-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
-        <maven-gpg-plugin.version>3.2.6</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.10.0</maven-javadoc-plugin.version>
-        <maven-jxr-plugin.version>3.5.0</maven-jxr-plugin.version>
-        <maven-pmd-plugin.version>3.25.0</maven-pmd-plugin.version>
+        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.10.1</maven-javadoc-plugin.version>
+        <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
+        <maven-pmd-plugin.version>3.26.0</maven-pmd-plugin.version>
         <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
         <maven-scm-plugin.version>2.1.0</maven-scm-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <nexus-staging-plugin.version>1.7.0</nexus-staging-plugin.version>
-        <spotbugs.version>4.8.6.4</spotbugs.version>
+        <spotbugs.version>4.8.6.5</spotbugs.version>
         <versions-maven-plugin.version>2.17.1</versions-maven-plugin.version>
 
         <!-- Plugin dependencies -->
-        <checkstyle.version>10.18.1</checkstyle.version>
+        <checkstyle.version>10.20.0</checkstyle.version>
         <findbugs-slf4j-bug-pattern.version>1.5.0</findbugs-slf4j-bug-pattern.version>
-        <findbugs-sec-bug-pattern.version>1.12.0</findbugs-sec-bug-pattern.version>
-        <pmd.version>7.5.0</pmd.version>
+        <findbugs-sec-bug-pattern.version>1.13.0</findbugs-sec-bug-pattern.version>
+        <pmd.version>7.7.0</pmd.version>
     </properties>
 
     <dependencyManagement>
@@ -367,6 +367,19 @@
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>${spotbugs.version}</version>
+                <dependencies>
+                    <!-- Included as dependencies as well as plugins so that versions plugins picks up new versions -->
+                    <dependency>
+                        <groupId>jp.skypencil.findbugs.slf4j</groupId>
+                        <artifactId>bug-pattern</artifactId>
+                        <version>${findbugs-slf4j-bug-pattern.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.h3xstream.findsecbugs</groupId>
+                        <artifactId>findsecbugs-plugin</artifactId>
+                        <version>${findbugs-sec-bug-pattern.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
